--- a/Lista-De-Tarefas.css
+++ b/Lista-De-Tarefas.css
@@ -11,16 +11,24 @@ body, ul, li, p{
     width: 100%;
     height: 700px;
     background-image: url("madeiraFundo.jpg");
-    display: flex;
-    flex-direction: row;
+    display: flex;  
+  
+    
 }
-
+#box-container{
+   height: auto;
+    width: 50%;
+    margin-left: 320px;
+    background-color: white;
+    margin-top: 15px;
+    border-radius: 25px;
+}
 
 
 h1{
     color: red;
-    margin-left: 150px;
+    margin-left: 180px;
     text-shadow: #000f00 2px 3px 2px;;
-    
+       
 }
 
