--- a/Lista-De-Tarefas.css
+++ b/Lista-De-Tarefas.css
@@ -32,3 +32,23 @@ h1{
        
 }
 
+
+#tarefa{
+    margin-top: 30px;
+    margin-left: 150px;
+    border-radius: 5px;
+    height: 25px;
+    width: 40%;
+    border: 2px solid black;
+}
+
+#btn-adicionar{
+    color: white;
+    background-color: red;
+    height: 40px;
+    width: 12%;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    border-radius: 6px;
+    box-shadow: 0 0 0.3em black;
+}
+
