--- a/Lista-De-Tarefas.css
+++ b/Lista-De-Tarefas.css
@@ -52,3 +52,10 @@ h1{
     box-shadow: 0 0 0.3em black;
 }
 
+#tarefas-box{
+    margin-left: 110px;
+    margin-top: 30px;
+    font-style:oblique;
+    
+}
+
