--- a/css/style.css
+++ b/css/style.css
@@ -6,28 +6,36 @@ body, ul, li, p{
     font-size: 1.2rem;
 
 } 
+body{
+    background-image: url("../images/madeiraFundo.jpg");
+}
+#app{
+    height: 700px;
+    width: 50%;
+    display: flex;
+    float: left;
+    flex-direction: column;
+    margin: 20px 25%;
+    background-color: white;
+    border-radius: 20px;
+    
+
+}
 
 #header{
     width: 100%;
-    height: 700px;
-    background-image: url("madeiraFundo.jpg");
-    display: flex;  
+    height: auto;
+    padding-bottom: 10px;
+    
   
     
-}
-#box-container{
-   height: auto;
-    width: 50%;
-    margin-left: 320px;
-    background-color: white;
-    margin-top: 15px;
-    border-radius: 25px;
 }
 
 
 h1{
+    width: 100%;
+    text-align: center;
     color: red;
-    margin-left: 180px;
     text-shadow: #000f00 2px 3px 2px;;
        
 }
