--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,7 @@ body{
     width: 100%;
     height: auto;
     padding-bottom: 10px;
-    
-  
-    
+      
 }
 
 
@@ -35,8 +33,7 @@ h1{
     width: 100%;
     text-align: center;
     color: red;
-    text-shadow: #000f00 2px 3px 2px;;
-       
+    text-shadow: #000f00 2px 3px 2px;;    
 }
 
 
@@ -64,5 +61,16 @@ h1{
     margin-top: 30px;
     font-style:oblique;
     
+}
+
+.apagar{
+    margin-left: 10px;
+    color: white;
+    background-color: red;
+    height: 25px;
+    width: 12%;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    border-radius: 6px;
+    box-shadow: 0 0 0.3em black;
 }
 
