--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ h1{
     
 }
 
-.apagar{
+.apagar, .openModal{
     margin-left: 10px;
     color: white;
     background-color: red;
@@ -73,4 +73,41 @@ h1{
     border-radius: 6px;
     box-shadow: 0 0 0.3em black;
 }
+
+
+.bg-modal{
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.75);
+    position: fixed;
+    z-index: 2;
+    display: none;
+    transition: 350ms;
+}
+
+.modal{
+    width: 50%;
+    height: 60%;
+    background-color: #fff;
+    border: 1px solid  #000;
+    border-radius: 10px;
+    margin:  80px auto  0 auto;
+}
+
+.modal span{
+    float: rigth;
+    font-size: 25px;
+    color: #000;
+    margin: 20px 20px;
+    transition: 350ms;
+    cursor:pointer;
+}
+
+.modal span:hover{
+    color: #990000;
+    transition: 350ms;
+
+}
+
+
 
