--- a/css/style.css
+++ b/css/style.css
@@ -109,9 +109,48 @@ h1{
 
 }
 
-.titulo-modal{
+#titulo-modal{
     margin-top: 10px;
     font-size: 32px;
+}
+
+#push-modal{
+    margin-top: 30px;
+    margin-left: 170px;
+    border-radius: 5px;
+    height: 25px;
+    width: 50%;
+    border: 2px solid black;
+    text-align: center;
+
+}
+
+#btn-modal{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 90px;
+}
+
+#btn-salvar{
+    color: black;
+    background-color: #00FF7F;
+    height: 40px;
+    width: 25%;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    border-radius: 6px;
+    box-shadow: 0 0 0.3em black;
+
+}
+
+#btn-cancelar{
+    color: black;
+    background-color: red;
+    height: 40px;
+    width: 25%;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    border-radius: 6px;
+    box-shadow: 0 0 0.3em black;
+
 }
 
 
